--- a/JsUnit/test.html
+++ b/JsUnit/test.html
@@ -1,25 +1,32 @@
-<!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.0 Transitional//EN">
+﻿<!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.0 Transitional//EN">
 <html>
  <head>
   <title> Simple Test</title>
 
   <script type="text/javascript" src="..\JsUnit\app\jsUnitCore.js"></script>
   <script type="text/javascript" src="..\Scripts\App\Classes\DateTimeConverter.js"></script>
- 
+  <script type="text/javascript" src="..\Scripts\App\Classes\AppAccount.js"></script>
+  <script type="text/javascript" src="..\Scripts\App\Classes\FormFieldValidator.js"></script>
   <script type="text/javascript">
   		var datetime = new Date();
-  		
+
   		var date_regex = /([01]?[0-9]|2[0-3]):[0-5][0-9]/;
   		//alert(date_regex.test(DateTimeConverter.prototype.ConvertJSDateToTimeFormat(datetime)));
   		function testConvertJSDateToDateFormart(){
-  			assertEquals("2016/11/6", DateTimeConverter.prototype.ConvertJSDateToDateFormart(datetime));
+  			assertEquals('2016/11/28', DateTimeConverter.prototype.ConvertJSDateToDateFormart(datetime));
   		}
   		function testConvertJSDateToTimeFormat(){
-  			assertTrue(date_regex.test(DateTimeConverter.prototype.ConvertJSDateToTimeFormat(datetime)));
-  		}
-       
-		
-		/*function addTwoNumbers(value1, value2) {
+  			assertEquals('17:45', date_regex.test(DateTimeConverter.prototype.ConvertJSDateToTimeFormat(datetime)));
+		}
+
+
+/*
+		function testCombineConvertedDateAndTimeToMsFormat(){
+			assertTrue('2016/11/27', '11:50:00 PM', DateTimeConverter.prototype.CombineConvertedDateAndTimeToMsFormat(datetime, datetime))
+		}
+  */     
+		/*
+		function addTwoNumbers(value1, value2) {
            return value1 + value2;
        }
        function testValidArgs() {
